-n option.

Added ability to move forwards/backwards specified distance in rvu "origin"
command.  Feature requested by John Mardaljevic, who essentially owns this
command, now.

Reduced bias in ambient super-sampling method.

Fixed bugs associated with zero transmission in chromatic tensor trees.
Thanks to Lars Grobe for pointing out issues.

Added RAYPATH searching for -f options to genrev, gensurf, genworm,
bsdf2klems, bsdf2ttree, and pcomb.  This makes behavior consistent
with rcalc, calc, and rendering tools.

Worked with Randolph Fritz to fix some issues with ies2rad and newer
IESNA63 standards.

Resurrected original bsdf2rad test program, renaming it bsdf2rado. Still an
optional build in src/cv/.

Fixed bug in rcontrib with virtual sources, where pretest was adding
to modifier accumulation buffers.  Reported by Mostapha.

Added an "aBSDF" material type that explicitly checks for peak extraction.
Its arguments are the same as the original "BSDF" type, but without the
thickness parameter, as proxy geometry is not supported by this new type.
The old "BSDF" type no longer does peak extraction under any circumstances,
since this behavior is superfluous for proxied geometry.

Added -r option to bsdf2rad (and bsdfview) to fix BSDF min and max range
for comparing BSDFs.

Fixed issue with pfilt -m option and uneven image size changes pointed
out by Rob Shakespeare.

Updates to evalglare and gendaylit from Jan Wienold, including new
colored sky option.

=========================
Version 5.3

Created radcompare program to compare Radiance tool output to reference outputs
during unit-testing.

Fixed issue reading very large files (> 2 GBytes) in rcollate.

Made picking function in rvu ignore transparent and void surfaces.

Added -orRxX options to rtrace to enable output of mirrored and unmirrored
contributions and distances to enable new types of reprojections.  This also
cleaned up and unified handling of effective ray lengths throughout code.